--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,8 +1,9 @@
 development:
-  adapter: async
+  adapter: redis
+  url: redis://localhost:6379
 
 test:
-  adapter: async
+  adapter: redis
 
 production:
   adapter: redis
