--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jquery": "^3.4.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "react_ujs": "^2.6.1"
   },
   "devDependencies": {
     "webpack-dev-server": "^3.10.3"
