added user profile and fixed css in flat

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,8 @@ default: &default
 development:
   <<: *default
   database: smate_development
-  username: smate
-  password: peeshuBooL5haed
+  # username: smate
+  # password: peeshuBooL5haed
 
 test:
   <<: *default
