--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-dropdown": "^1.7.0",
     "react-tabs": "^3.1.0",
     "react_ujs": "^2.6.1"
   },
