--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,10 @@ default: &default
 
 development:
   <<: *default
+  host: "127.0.0.1"
   database: smate_development
-  # username: smate
-  # password: peeshuBooL5haed
+  username: smate
+  password: peeshuBooL5haed
 
 test:
   <<: *default
