--- a/config/database.yml
+++ b/config/database.yml
@@ -5,10 +5,10 @@ default: &default
 
 development:
   <<: *default
-  host: "127.0.0.1"
+  # host: "127.0.0.1"
   database: smate_development
-  username: smate
-  password: peeshuBooL5haed
+  # username: smate
+  # password: peeshuBooL5haed
 
 test:
   <<: *default
@@ -17,5 +17,5 @@ test:
 production:
   <<: *default
   database: smate_production
-  username: smate
-  password: <%= ENV['SMATE_DATABASE_PASSWORD'] %>
+  # username: smate
+  # password: <%= ENV['SMATE_DATABASE_PASSWORD'] %>
